# SelfLearing_Coding_AI_System

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  bootstrap.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  coder.py  context_builder.py  debugger.py  decomposer.py  evaluator.py  memory_agent.py  planner.py  prompts.py  reflector.py  researcher.py  tool_executor.py
backend/app/api/: deps.py
backend/app/db/: __init__.py  migrate.py  models.py  qdrant.py  redis_client.py  session.py
backend/app/learning/: __init__.py  confidence.py  evaluation.py  pattern_evolver.py  reflection_engine.py
backend/app/llm/: __init__.py  anthropic_provider.py  local_provider.py  openai_provider.py  provider.py  retry.py  token_meter.py  types.py
backend/app/memory/: __init__.py  compression.py  episodic.py  lifecycle.py  long_term.py  service.py  short_term.py  utils.py
backend/app/observability/: __init__.py  logger.py  metrics.py  persistence.py  tracing.py
backend/app/orchestration/: __init__.py  orchestrator.py  router.py  state.py
backend/app/project/: __init__.py  ast_python.py  indexer.py
backend/app/rag/: __init__.py  chunking.py  embeddings.py  ingestion.py  retriever.py  service.py
backend/tests/: conftest.py  test_ast_python.py  test_chunking.py  test_confidence.py  test_evaluation.py  test_local_provider.py  test_memory_utils.py  test_orchestrator_recursion.py  test_router.py  test_safety.py  test_token_meter.py  test_tools.py  test_tracing.py
(+48 files in other folders)
